FIX: ensures wide equations are responsive on Safari
This commit ensures that wide equations can be scrolled on Safari. It previously failed because Safari doesn't not support the two value overflow shorthand.

--- a/assets/stylesheets/common/discourse-math.scss
+++ b/assets/stylesheets/common/discourse-math.scss
@@ -24,7 +24,7 @@
         // special handeling for katex
         .katex-html {
           display: block;
-          overflow: auto hidden;
+          overflow-x: auto;
           max-width: 100%;
           padding: 0.25em 0.5em;
           box-sizing: border-box;
